--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.6"
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
+    "nodemon": "^3.0.1",
+    "react-router-dom": "^6.15.0"
   }
 }
